	* Reorganized and cleaned up the MSN protocol plugin (Felipe Contreras)
	* Added the -c option to specify location of the .gaim directory, removed
	  the outdated -f option that no longer had any effect (Daniel Atallah)
	* Novell GroupWise protocol support added (Novell)
	* WYSIWYG improvements (Tim Ringenbach)
	* WYSIWYG editing for user info (Jon Oberheide)
	* Rich-text copy and paste

	Bug Fixes:
	* TOC has been removed from the default build list. I do not support
	  it, as no one is making sure that the updated code to keep it
	  compiling actually works, nor is anyone fixing bugs in it.
	* Save Conversation works again (Kevin Stange)
	* The Clear button in privacy works (Robert Mibus)
	* MSN error reporting works again (Stu Tomlinson)
	* MSN e-mail notifications should no longer cause Gaim to crash
	  (Felipe Contreras)
	* Fixed an infinite loop bug that would sometimes cause MSN to lock
	  up (Nickolai Zeldovich)
	* All away messages should now show up in tooltips
	* Removing zephyr buddies no longer crashes (Arun A. Tharuvai)

version 0.76 (04/01/2004):
	New Features:
	* WYSIWYG text input (with much help from Gary Kramlich and Kevin Stange)
	* Ability to be invisible on AIM
	* Chatroom list support (Tim Ringenbach)
	* Added auto-completion for screen names to the New Instant Message and
	  Get User Info dialogs.
	* Non-ascii character support in AIM chats (Uli Luckas and Marco Ziech)
	* Vastly improved browser opening, with tab support! (Nathan Fredrickson)
	* Added support for connecting to MSN using the port 80 method.
	* Support for Mozilla Firefox (Chris Friesen and Nathan Fredrickson)
	* Added protocol-specific preferences (Gary Kramlich)
	* Local IP address information can be changed in Preferences
	  (Tim Ringenbach)
	* Improved local IP address detection (Tim Ringenbach)
	* Offline accounts in account drop-down lists are now greyed (Etan Reisner)
	* Improved accessibility support for screen readers and other
	  accessibility tools (Marc Mulcahy)